2006-02-01 aurel
* modify Base_callViewDialogMethod

2006-01-31 jerome
* implement preference workflow the right way, fix a bug in a guard.

2006-01-31 aurel
* change my by your in some TemplateTool skins and modify Base_callDialogMethod to take this change into account

2006-01-31 aurel
* fix compution of number of column in index_html

2006-01-31 jerome
* quick hack to make listbox rendering in report tree / domain tree work again.

2006-01-31 aurel
* fix TemplateTool_installBusinessTemplateListAction

2006-01-31 Kevin
* add **kw parameter to TemplateTool_installRepositoryBusinessTemplateList

2006-01-31 yo
* Fix OrganisationModule_viewOrganisationList and PersonModule_viewPersonList to use translated titles or plain titles.

2006-01-30 jerome
* added support for workflow validation in list mode (see Accounting Transaction Module for an example of how to use it)

2006-01-30 jerome
* modify Organisation_viewDetails to add a listbox for Accounting Periods.

2006-01-30 aurel
* change name of some actions

2006-01-27 aurel
* add action to create module

2006-01-26 Jerome
* added Base_uniqueReferenceInFolderValidator python script for my_reference fields validators.
* make sure two currencies with the same reference do not exist.

2006-01-26 Romain
* modify Base_edit to call field_editor after saving the matrixbox.

2006-01-26 Aurel
* add some actions

2006-01-23 Alex
* simplified Bank Accounts
* added support for Portal Type Role Definitions

2006-01-23 JPS
* Added support for legal_parent, natural_parent and insurance base categories

2006-01-23 Aurel
* check category_list is a list in ERP5Type_asSecurityGroupId

2006-01-23 Alex
* Added "Add portal folders" permission for Author in Base_setDefaultSecurity

2006-01-21 JP
* Added Base_jumpToRelationObject to ease the implementation of jump menus
* Added support for user based role assignment (ERP5Type_getSecurityCategoryFromArrow)

2006-01-20 JP & Jerome